--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <p>Controls:</p>
+    <p>right arrow for moving forward</p>
+    <p>up arrow for jumping</p>
     <div class="gameContainer">
         <div class="gameOver"> 0 CGPA</div>
         <div class="BCE"></div>
